@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-17T02:01:59Z",
+  "timestamp" : "2022-06-17T08:28:48Z",
   "count_outdated" : 539,
   "uniques_outdated" : 305,
   "count" : 642,
-  "uniques" : 333,
+  "uniques" : 334,
   "clones" : [
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
